base-chart/unittest/expected/traefik.yaml
---
# Source: homelab-base-chart/templates/traefik/auth/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-forward-auth
  namespace: argocd

spec:
  selector:
    app: traefik-forward-auth
  ports:
    - name: http
      port: 80
      targetPort: 4181
      protocol: TCP
---
# Source: homelab-base-chart/templates/traefik/auth/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: argocd
  name: traefik-forward-auth
  labels:
    app: traefik-forward-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-forward-auth
  template:
    metadata:
      labels:
        app: traefik-forward-auth
    spec:
      containers:
        - name: traefik-forward-auth
          image: thomseddon/traefik-forward-auth:latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            tcpSocket:
              port: 4181
            initialDelaySeconds: 10
            periodSeconds: 10
          ports:
            - name: http
              containerPort: 4181
---
# Source: homelab-base-chart/templates/traefik/auth/auth-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-forward-auth
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`auth.home-server.dev`)
      services:
        - name: traefik-forward-auth
          port: 80
      middlewares:
        - name: traefik-forward-auth
          namespace: argocd
  tls:
    certResolver: cloudflare
---
# Source: homelab-base-chart/templates/traefik/traefik-traefik-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "10"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`traefik.home-server.dev`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: traefik-forward-auth
          namespace: argocd
  tls:
    certResolver: cloudflare
---
# Source: homelab-base-chart/templates/traefik/auth/auth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-forward-auth
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true

spec:
  forwardAuth:
    address: http://traefik-forward-auth
    trustForwardHeader: true
    authResponseHeaders:
      - X-Forwarded-User
---
# Source: homelab-base-chart/templates/traefik/cloudflare/traefik-plugin-cloudflare.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cloudflare
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true

spec:
  plugin:
    traefik-plugin-cloudflare:
      overwriteRequestHeader: true
